--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
     <div class="card-body">
       <p class="card-text">
         <h3>Hi Shirin,</h3>
-    
-        <strong>I knew you have hard working, non-giving up and very strong kind of personality. We know that in ORXE there is a lot of work but you have worked this month without caring about long late hours or early mornings( Sometimes scrolling down after working hours a green light on <i>NIYAZI, SHIRIN</i> was the damn surprising + motivational). Working long hours, 
-          I have faced but then i was not able to find time for even my fav things but You must be doing several things yourself beside this long hours work  you must be doing from cooking tasty maggie, washing your own cloths, to checking cloths on ajio and managing such hectic schedule with such ease is not oridinary task for most of us</strong> <br><span style="color:red;">So, <h6><b><i>kudos to this hardest worker,purest and coolest soul.<br>Keep it up. You are damn hard worker, Allah will definitely bless you in your journey.....</i></b></h6></span>
+            <strong>I knew you have hard working, non-giving up and very strong kind of personality.We know ORXE is having a lot of work but you have worked this month realy hard without caring about long late hours or early mornings( Sometimes scrolling down after working hours a green light on <i>NIYAZI, SHIRIN</i> was the damn surprising + motivational, so that i know). Working long hours, 
+          I have faced but then i was not able to find time for even my fav things but You must be doing several things yourself beside this long hours work  you must be doing from cooking tasty maggie, washing your own cloths, to checking cloths on ajio and managing such hectic schedule with such ease is not oridinary task for most of us</strong> <br><span style="color:red;">So, <h6><b><i>kudos to this hardest worker,purest and coolest soul.</i></b></h6></span>
           <sub>Reason behind sharing the post is that Every one really really likes to appreciate real goodness as it is rare and You are real goodness and You deserve SHOUT-OUT but KUDOS sounds cool</sub>
+        <h5> You would be taking care of your health i am sure but just general guideline i generally ignore -
+            <ul>  
+                <li> Not to look at screen for more than 10 mins continuosly.</li>
+                </h5>
+                
         </p>
     </div>
   </div>
