--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <h3>Hi Shirin,</h3>
             <strong>I knew you have hard working, non-giving up and very strong kind of personality.We know ORXE is having a lot of work but you have worked this month realy hard without caring about long late hours or early mornings( Sometimes scrolling down after working hours a green light on <i>NIYAZI, SHIRIN</i> was surprising + motivational, so that i know). Working long hours, 
           I have faced but then i was not able to find time for even my fav things but You must be doing several things yourself beside this long hours work  you must be doing from cooking tasty maggie, washing your own cloths, to checking cloths on ajio and managing such hectic schedule  is not oridinary task for me</strong> <br><span style="color:red;">So, <h6><b><i>kudos to this hardest worker,purest and coolest soul.</i></b></h6></span>
-          <sub>You deserve SHOUT-OUT but KUDOS sounds cool</sub>
+          <sub>You deserve SHOUT-OUT but KUDOS sounds cool.<br>
        You would be taking care of your health i am sure but just general guideline i generally ignore -
             <ul>  
                 <li> Not to look at screen for more than 10 mins continuosly.</li>
-               
+                </sub>
                 
         </p>
     </div>
